# sakura

./: Makefile
.github/workflows/: cmake.yml  doc.yaml  doc.yml
bench/A/: Makefile  fetchAllPointing-sqlite.cc  fetchAllPointing.cc  insertToPointing-sqlite.cc  insertToPointing.cc
bench/B/: Makefile  get-all-casa.cc  get-all-sqlite.cc
bench/C/: Makefile  addcol-casa.cc
bench/D/: Makefile  select-get-casa.cc  select-get-sqlite.cc
bench/E/: Makefile  select-update-casa.cc
bench/avg/: Makefile  average-ext.cc  average.cc
bench/e2eReduce/: .cproject  .project  CMakeLists.txt  config.log4j  e2eana.config  e2etest.config
bench/e2eReduce/cmake-modules/: FindCasaCore.cmake  FindLibSakura.cmake  FindLog4CXX.cmake  FindXDispatch.cmake
bench/e2eReduce/src/: config_file_reader.h  context_handler.h  main.cc  option_parser.h  utils.h
c++/: Doxyfile  Makefile
c++/include/: SQLite.h
c++/lib/: Makefile  SQLite.cc  libSQLiteMMapVTable.cc  sql-ext.cc
libsakura/: .cproject  .gitignore  .project  CMakeLists.txt  INSTALL.txt  NOTICE  fix-license.sh  libsakura.pc.in
libsakura/cmake-modules/: FindEIGEN3.cmake  FindEigen3.cmake  FindFFTW3.cmake  FindLOG4CXX.cmake  SetArchFlags.cmake
libsakura/doc/: mainpage.dox
libsakura/doc/misc/: SakuraStatistics-algorithm.xlsx
libsakura/python-binding/: CMakeLists.txt  Doxyfile.in  python-binding.cc  test.py  test.sh  test3.py
libsakura/python-binding/libsakura/: config-python.h.in  sakura-python.h
libsakura/src/: .BAK.gen_logical_operation.cc  .BAK.logical_operation.cc  CMakeLists.txt  Doxyfile.in  Doxyfile.in.1_8  EigenBinaryVisitorPlugin.h  OptimizedImplementationFactory.cc  algebraic_operation.cc  apply_calibration.cc  baseline.cc  baseline.h  basic_operation.cc  bit_operation.cc  bool_filter_collection.cc  concurrent.cc  convolution.cc  eigen_binary_visitor_plugin.h  fft.cc  gen-statistics.cc  gen-util.c  gen_algebraic_operation.cc  gen_apply_calibration.cc  gen_baseline.cc  gen_basic_operation.cc  gen_bit_operation.cc  gen_bool_filter_collection.cc  gen_convolution.cc  gen_fft.cc  gen_gridding.cc  gen_interpolation.cc  gen_logical_operation.cc  gen_numeric_operation.cc  gen_statistics.cc  gen_util.c  gen_util.cc  gridding.cc  interpolation.cc  interpolation.h  interpolation.tcc  interpolation_linear.h  (+18 more)
libsakura/src/libsakura/: OptimizedImplementationFactory.h  OptimizedImplementationFactoryImpl.h  concurrent.h  config.h.in  localdef.h  logger.h  memory_manager.h  optimized_implementation_factory.h  optimized_implementation_factory_impl.h  packed_operation.h  packed_type.h  sakura.h
libsakura/test/: .BAK.logical_operation.cc  CMakeLists.txt  algebraic_operation.cc  aligned_memory.h  apply_calibration.cc  baseline.cc  baseline_all.cc  baseline_ks.cc  baseline_sk.cc  baseline_wk.cc  basic_operation.cc  bench-interpolation-casacore.cc  bench-interpolation-sakura.py  bench-interpolation-scipy.py  bench-interpolation.cc  bench-lsqfit-casacore.cc  bench-lsqfit-numpy.py  bench-lsqfit-sakura.py  bench-template.cc  bench-template.py  bench_template.py  bit_operation.cc  bool_filter_collection.cc  c_interface.c  convolution.cc  fft.cc  gridding.cc  init.cc  interpolation.cc  interpolation.h  interpolation1d.cc  interpolationPseudo2d.cc  interpolation_1d.cc  interpolation_1dx.cc  interpolation_1dy.cc  interpolation_array1d.cc  interpolation_pseudo2d.cc  interpolation_x.cc  interpolation_y.cc  libsakura.log4j  (+9 more)
libsakura/test/asap/: BisectionLocator.h  BisectionLocator.tcc  CubicSplineInterpolator1D.h  CubicSplineInterpolator1D.tcc  Interpolator1D.h  Interpolator1D.tcc  Locator.h  Locator.tcc
sql/: MS.erm  MSM.ddl  MST.ddl  Makefile  fix.sed  sep.sh
tools/converter/msconverter/: Makefile  msconverter.cc  test.sql
